# tawqa

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile.unified  README.md  build.sh  main.cpp  makefile  tawqa.cc  tawqa_bridge.cc  tawqa_doexec.cc  tawqa_generic.hh  tawqa_getopt.cc  tawqa_getopt.hh  tawqa_hybrid.cc
src/: input.rs  listener.rs  main.rs  shell.rs  termios.rs  unix.rs
