[package]
name = "tawqa"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tawqa"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
rustyline = "14.0.0"
log = "0.4.22"
fern = { version = "0.6.2", features = ["colored"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3"
signal-hook = "0.3.17"
